syntax = "proto3";

option csharp_namespace = "IdpServiceFacade";

package organization;

service Organization {
  rpc InviteUser (OrgUserRequest) returns (OrganizationReply);
  rpc InitiateLockout (OrgRequest) returns (OrganizationReply);
  rpc MarkAsSuspicious (OrgRequest) returns (OrganizationReply);
  rpc MarkAsFraud (OrgRequest) returns (OrganizationReply);
  rpc InitiateLegalHold (OrgRequest) returns (OrganizationReply);
  rpc CreateOrganization (CreateOrganizationRequest) returns (CreateOrganizationReply);
  rpc ListOrganizations (EmptyRequest) returns (ListOrganizationReply);
}

message EmptyRequest {}

message ListOrganizationReply{
  repeated GetOrganizationReply organizations = 1;
}


message GetOrganizationReply {
  string id = 1;
  string name = 2;
  string displayName = 3;
  Metadata metadata = 4;
}

message Metadata {
  repeated MetadataItem item = 1;
}

message MetadataItem {
  string key = 1;
  string value = 2;
}

message OrgRequest {
  string orgEmail = 1;
}

message OrgUserRequest {
  string orgId = 1;
  string userEmail = 2;
}

message OrganizationReply {
  bool ok = 1;
  string error = 2;
}

message CreateOrganizationRequest {
  string name = 1;
  optional string legacyId = 2;
  optional string legacyUid = 3;
}

message CreateOrganizationReply {
  bool ok = 1;
  optional string error = 2;
}
